tests/errors/cons.out
cli:3:16: error: 'cons' expects exactly 2 arguments
          cons 1
               ^
1 error generated.
